<resources>
	<string name="app_name">RubikCube Teacher</string>
	<string name="helpZoomOut">Zoom out the Rubik\'s cube.</string>
	<string name="helpZoomIn">Zoom in the Rubik\'s cube.</string>
	<string name="helpDisrupt">Disrupt the Rubik\'s cube rapidly.</string>
	<string name="helpAutoPlay">After touching the button, will give a kind of solution method of Rubik\'s cube, the concrete solution method shows at a screen under of the formula hint area.\r\nAccording to the formula, can restore a Rubik\'s cube gradually!\r\nNotice:Under automatic mode, only can operate a Rubik\'s cube by formula hint area, can not operate a Rubik\'s cube directly.</string>
	<string name="helpRestart">Restore the Rubik\'s cube to the beginning of start status.This function able to return to the beginning of Rubik\'s cube of start status at any time, you can start again from the same status, so you can practice it again.</string>
	<string name="helpStar">The Rubik\'s cube status indicator. Each stars representative a middle status of solution. When the stars shines, the corresponding step have been completed.</string>
	<string name="helpTimer">Rubik\'s Clock. Only avaible in Play mode.</string>
	<string name="helpStep">Step Counter. Show the total step of you have done, or the current step of automatic solves.</string>
	<string name="helpShake">Gravity Cube. You can operate the cube by gravity sensor. Support the below action：\r\n\tDisrupt: Shake the phone quickly\r\n\tAuto Solve: Turn the screen towards down and up\r\n\tLast Step: Cellular phone to Left tilt to one side\r\n\tNext Step:Cellular phone to Right tilt to one side</string>
	<string name="helpHelp">Touch a help button first, then touch other objects, can get the detailed help of the object.</string>
	<string name="tipGetPoints">Get Free Points:\r\n1.Get daily awards\r\n2.Share to friends get 10 points\r\n3.Get more points by download free APP.</string>
	<string name="tipHelp">Please touch the object that wants to obtain a help.</string>
	<string name="tipAutoPlay">The automatic solution Rubik\'s cube completes~~~\r\nUsed the formula hint area to restore a Rubik\'s cube gradually.</string>
	<string name="tipNotDisturb">The Rubik\'s cube is in complete status~~~\r\nPlease disrupt a Rubik\'s cube first, and then start automatic solution.</string>
	<string name="tipDisrupt">Rubik\'s have been disrupt.</string>
	<string name="tipNotSelectStudy">You haven\'t select the step that you want to study.</string>
	<string name="tipDayliyAward">Got daily Awards</string>
	<string name="tipFirstAward">Got First Awards</string>
	<string name="szGetDailyAward">我今天在《教你玩魔方》游戏中获得了%1$d积分的奖励</string>
	<string name="szFirstAward">You got %1$d points for First use.\nYou can get more free points by these way:\n1.Got everyday Award by everyday use.\n2.Share to friends.\n3.Download free APP for FREE points.</string>
	<string name="tipPointsNotEnough">Points not enough~~~\r\nPlease get free points first.</string>
	<string name="tipStudySpend">Study Mode Spend %1$d Points</string>
	<string name="helpHelpStart">Please touch the object that you want to obtain a help.</string>
	<string name="helpTip">The district is formula hint area.\r\n1.Automatic (or study) mode, what the district show is the solution method of Rubik\'s cube;\r\n2.Otherwise record the step that you have operated.\r\nTouched formula by finger, can let the Rubik\'s cube rotation by formula.</string>
	<string name="helpLeft">The left side of Rubik\'s cube, touch it can rotate the Rubik\'s cube 90°</string>
	<string name="helpRight">The back side of Rubik\'s cube, touch it can rotate the Rubik\'s cube -90°</string>
	<string name="helpDown">The bottom of Rubik\'s cube, touch it can roll over the Rubik\'s cube 90°</string>
	<string name="helpCube">Slide on the Rubik\'s cube by finger can let a side rotate 90°, the long distence slide can rotate 180°</string>
	<string name="tipRestart">The Rubik\'s cube has already resumed to beginning status.</string>
	<string name="tipUpgrade">Current version:%1$s, a latest version:%2$s, upgrade now?</string>
	<string name="setupShake">Use Gravity to control cube</string>
	<string name="setup180degree">Rotate 180° by long slide</string>
	<string name="setupIntelligentTip">Intelligent Hints</string>
	<string name="setupIntelligentText">Display text hints</string>
	<string name="setupShowStudy">Show detail when study</string>
	<string name="setupShowButton">Show button on screen</string>
	<string name="setupShowUnseen">Show back side with small diagram</string>
	<string name="setupShowStar">Show completion progress</string>
	<string name="setupShowTip">Show formula hint area</string>
	<string name="setupShowTime">Show Rubik\'s Clock</string>
	<string name="setupShowStep">Show Step Counter</string>
	<string name="setupSoundRotate">Action sound effect</string>
	<string name="setupCenterPlate">Forbid the middle side rotate</string>
	<string name="setupTipMode">Show formula by graphic</string>
	<string name="method1_step1">1.Complete X shapes on bottom side</string>
	<string name="method1_step2">2.Complete anti-T shape and bottom side</string>
	<string name="method1_step3">3.Complete the 2 layer of bottom</string>
	<string name="method1_step4">4.Complete the top X shapes</string>
	<string name="method1_step5">5.Complete the top side</string>
	<string name="method1_step6">6.Adjustment the sequence of color</string>
	<string name="method1_step7">7.Recoverly the Rubik\'s cube</string>
	<string name="szSelectMethod">Select Method of Solves:</string>
	<string name="szCubeMethod1">Solves of Layer First</string>
	<string name="szCubeMethod2">Solves of Bridge</string>
	<string name="b_2_1">The status that the Rubik\'s cube wants to attain,such as left diagram, make a 1×2×3 block at the R side. When this step completes, the BR, DBR, DR, DFR, FR blocks were in correct position.</string>
	<string name="b_2_2">According to the following 3 steps, you can make a 1×2×3 block at the R side:\r\n\t\t1. Complete RD block first\r\n\t2.Complete RF and RFD blocks\r\n\t3.Complete RB and RBD blocks at last\r\nNotice:In this process, the complete block disallow to disrupt.</string>
	<string name="b_2_3">In this step, we always make great effort to combine the close side block and corner block together. The ability of trace the moving of block is very important.\r\nWhile doing the first side-corner block piece,  don\'t need to look for the most suitable block for start, as long as the first block you have seen.\r\nThe second side block simple some, because the M layer can arbitrarily rotation.\r\nStep two suitable for right hand, because don\'t disrput the step 1, we can use U, R, M and r operation arbitrarily, and the F and B operation that can go against.\r\nAccording to the formula of  U, R, M and r may be a little more steps, but the advantage is also very obvious:\r\n\t1. don\'t need loosen left hand, don\'t need whole rotation\r\n\t2. the right hand very vivid\r\n\t3. less thinking time</string>
	<string name="b_2_4">1ST, Complete RD block</string>
	<string name="b_2_5">1.1 move the RD block to the position such as left diagram.</string>
	<string name="b_2_6">2ND, Complete RF and RFD blocks</string>
	<string name="b_2_7">2.1 First, move RF to the position of FD, yellow int the front side.</string>
	<string name="b_2_8">2.2 Second, move RFD to the position of RUB.</string>
	<string name="b_2_9">2.3 Third, move RF from FD to the position of UB.</string>
	<string name="b_2_10">2.4 At last, RF and RFD turn into it\'s position.</string>
	<string name="b_2_11">3RD, Complete RB and RBD blocks</string>
	<string name="b_2_12">3.1 First, move RB to the position of FD, yellow in the front side.</string>
	<string name="b_2_13">3.2 Second, move RBD to the position of LUB.</string>
	<string name="b_2_14">3.3 Third, move RB from FD to the position of UB.</string>
	<string name="b_2_15">3.4 At last, RB and RBD turn into it\'s position.</string>
	<string name="b_4_1">\tThe status that the Rubik\'s cube wants to attain,such as left diagram, all the 6 side are recover completely.</string>
	<string name="b_4_2">This step can divide into 3 sub step:\r\n\t1. Complete the color direction of side block\r\n\t2. Complete the L and R side\r\n\t3. Complete the last 4 side blocks</string>
	<string name="b_4_3">1ST, Complete the color direction of side block</string>
	<string name="b_4_4">1.1To the step, we only left the last 6 block to restored. Show such as the left diagram</string>
	<string name="b_4_5">First, we need to restore the color direction of 6 side blocks.\r\nSo, what is a correct color direction?\r\nAs above diagram, the color of the 4 side block on the UP side, if only have ORANGE(up side color) or RED(DOWN side color), then the color direction is correct. If appear other colors, then the color direction is not right.\r\nThere is totally nine kinds of circumstances, the formula is very short and easy to understand.</string>
	<string name="b_4_6">There have two basic form, that is the wrong color are a FD, UF, UL, UR(M\'UM and M\'U\'M and M\'UM\', M\'U\'M\') and symmetry BD and UB, UL and UR respectively.\r\nFlow these  3 step, pleases comprehension with it:\r\n\t1. Turn the side block in F side or B side over.\r\n\t2. Rotate the up side 90°(direction arbitrarily, it can turn the left 2 wrong block into M layer)\r\n\t3. Rotate M layer 90°\r\nFor various circumstance of other, you can discover that with this formula, it become above-mentioned two kinds of formses.	</string>
	<string name="b_4_7">Pls keep in memory for the five kinds of formulae:Two kinds of basic circumstances, UF and UL, UF and UB,  and the 4 side block on up side.\r\nThe situation that there have one wrong block on U side or D side. use U operation to let the wrong block not in M layer, and use M2 operation can immediately change into the above-mentioned circumstance.\r\nThe situation that there have two wrong blocks both in U side and D side. If the two 2 blocks is center symmetry, then use U operation once, and then M2 operation, it will change to 4 side block on up side; if the two blocks is not center symmetry, then M2 and U（or U\'） operation  can change into two kinds of basic circumstances.\r\nAs for the wrong block are all in down side, use M2 operation.</string>
	<string name="b_4_8">2ND, Complete the L and R side</string>
	<string name="b_4_9">2.1 First, move LU and RU to the position of left diagram</string>
	<string name="b_4_10">2.2 Second, rotate up side, let the up-side\'s color is contrary with LU and RU</string>
	<string name="b_4_11">2.3 Third, use left M2 operation, the LU and RU will in correct position</string>
	<string name="b_4_12">2.4 4th, the up side in it\'s position</string>
	<string name="b_4_13">2.5 5th, use X operation to turn center block into it\'s position</string>
	<string name="b_4_14">The basic thought is to place two target block (the side block that wants to restore) at the same time at the D side, then turn the target position of up side to the M layer, then M2 operation, then U or U\'operation.	</string>
	<string name="b_4_15">3RD, Complete the last 4 side blocks</string>
	<string name="b_4_16">This step restore the left 4 side blocks.\r\nIf you are a newer, Pls turn the center block into it\'s position once can lower the difficlty of observe.\r\nThree kinds of circumstances are as follows:</string>
	<string name="b_4_17">3.1 In the 4 side blocks, if one is in correct position, then rotate the whole cube, let this block in FD, Observe the upward color of UF, if same with center block of U side, use formula MU2 M\'; If is different, use formula U2 MU2.</string>
	<string name="b_4_18">3.2 In the 4 side blocks, if all not in correct position, then change the two side block each with other. use formula U2M2U2</string>
	<string name="b_4_19">3.3 In the 4 side blocks, if all in correct position, then change the block by cross, use formula E2ME2</string>
</resources>